--- a/Home/templates/Home/Home.html
+++ b/Home/templates/Home/Home.html
@@ -1,10 +1,7 @@
 {% extends 'base.html' %}
 
 {% block links %}
-<link href="https://fonts.googleapis.com/css?family=Bellefair|Open+Sans" rel="stylesheet">
-<link rel="stylesheet" href="css/styles-merged.css">
-<link rel="stylesheet" href="css/style.min.css">
-<link rel="stylesheet" href="css/custom.css">
+
 <link rel="stylesheet" href="bxslider-4-4.2.12/src/css/jquery.bxslider.css">
 <script src="js/jqueryscript.js"></script>
 {% endblock %}
@@ -166,6 +163,14 @@
                         </div>
                     </div>
                 </a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <div class="zoom">
+                    <a href="services.html" class="btn btn-primary btn-lg probootstrap-animate" style="font-size:20px">
+                        More Services </a>
+                </div>
             </div>
         </div>
     </div>
@@ -397,11 +402,9 @@
         </div>
     </div>
 </section>
-{% end block %}
+{% endblock %}
 
 {% block scripts %}
-<script src="js/scripts.min.js"></script>
-<script src="js/custom.min.js"></script>
 <script src="bxslider-4-4.2.12/src/js/jquery.bxslider.js"></script>
 <script>
     $(document).ready(function () {
