--- a/Blog/templates/Blog/Blog.html
+++ b/Blog/templates/Blog/Blog.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
-
+{% load staticfiles %}
 {% block links %}
-<link rel="stylesheet" href="css/blog.css">
-<script src="js/jqueryscript.js"></script>
+<link rel="stylesheet" href="{% static 'css/blog.css' %}">
+<script src="{% static 'js/jqueryscript.js' %}"></script>
 {% endblock %}
 
 {% block content%}
@@ -26,14 +26,14 @@
     <div class="container">
         <div class="row probootstrap-animate">
             <div class="blog col-md-6">
-                <a href="post.html" target="_blank">
+                <a href="{% url 'Post' %}" target="_blank">
                     <img src="img/gal_img_sm_2.jpg" alt="" class="img-fluid">
                 </a>
                 <div class="d-flex justify-content-between">
                     <div class="blogDate">20 May | 2016</div>
                     <div class="blogCategory">BUSINESS</div>
                 </div>
-                <a href="post.html" target="_blank">
+                <a href="{% url 'Post' %}" target="_blank">
                     <h3 class="blogTitle">Alberto Savoia Can Teach You About Interior</h3>
                 </a>
                 <p class="text-muted blogSummary">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -63,9 +63,6 @@
                     <div class="blogEditor">John Doe</div>
                 </footer>
             </div>
-        </div>
-        <!-- END row -->
-        <div class="row probootstrap-animate">
             <div class="blog col-md-6">
                 <a href="#">
                     <img src="img/gal_img_sm_2.jpg" alt="" class="img-fluid">
@@ -109,11 +106,11 @@
             <div class="col-md-12">
                 <nav aria-label="Page navigation example">
                     <ul class="pagination pagination-template d-flex justify-content-center">
-                        <li class="page-item"><a href="#" class="page-link"> <img src="img/left-arrow.png" alt="" style="width:12px; height:auto"></a></li>
+                        <li class="page-item"><a href="#" class="page-link"> <img src="{% static 'img/left-arrow.png' %}" alt="" style="width:12px; height:auto"></a></li>
                         <li class="page-item"><a href="#" class="page-link">1</a></li>
                         <li class="page-item"><a href="#" class="page-link">2</a></li>
                         <li class="page-item"><a href="#" class="page-link">3</a></li>
-                        <li class="page-item"><a href="#" class="page-link"> <img src="img/right-arrow.png" alt=""
+                        <li class="page-item"><a href="#" class="page-link"> <img src="{% static 'img/right-arrow.png' %}" alt=""
                                     style="width:12px; height:auto"></a></li>
                     </ul>
                 </nav>
@@ -124,6 +121,5 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="js/scripts.min.js"></script>
-<script src="js/custom.min.js"></script>
+<script src="{% static 'js/blog.js' %}"></script>
 {% endblock %}
