--- a/Gallery/templates/Gallery/Gallery.html
+++ b/Gallery/templates/Gallery/Gallery.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
-
+{% load staticfiles %}
 {% block links %}
-<link rel="stylesheet" href="css/galleryslider.css">
-<script src="js/jssor.slider-27.5.0.min.js"></script>
-<script src="js/jqueryscript.js"></script>
-<script src="js/galleryslider.js"></script>
+<link rel="stylesheet" href="{% static 'css/galleryslider.css' %}">
+<script src="{% static 'js/jssor.slider-27.5.0.min.js' %}"></script>
+<script src="{% static 'js/jqueryscript.js' %}"></script>
+<script src="{% static 'js/galleryslider.js' %}"></script>
 {% endblock %}
 
 {% block content %}
@@ -36,100 +36,100 @@
                     <div class="probootstrap-gallery">
                         <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject" class="grid-item probootstrap-animate">
                             <a href="img/gal_img_full_1.jpg" itemprop="contentUrl" data-size="1000x666">
-                                <img src="img/gal_img_sm_1.jpg" itemprop="thumbnail" alt="Free Bootstrap Template by uicookies.com" />
+                                <img src="img/gal_img_sm_1.jpg" itemprop="thumbnail" alt="" />
                             </a>
                             <figcaption itemprop="caption description">Image caption here</figcaption>
                         </figure>
                         <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject" class="grid-item probootstrap-animate">
                             <a href="img/gal_img_full_2.jpg" itemprop="contentUrl" data-size="1000x667">
-                                <img src="img/gal_img_sm_2.jpg" itemprop="thumbnail" alt="Free Bootstrap Template by uicookies.com" />
+                                <img src="img/gal_img_sm_2.jpg" itemprop="thumbnail" alt="" />
                             </a>
                             <figcaption itemprop="caption description">Image caption here</figcaption>
                         </figure>
                         <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject" class="grid-item probootstrap-animate">
                             <a href="img/gal_img_full_3.jpg" itemprop="contentUrl" data-size="1000x1500">
-                                <img src="img/gal_img_sm_3.jpg" itemprop="thumbnail" alt="Free Bootstrap Template by uicookies.com" />
+                                <img src="img/gal_img_sm_3.jpg" itemprop="thumbnail" alt="" />
                             </a>
                             <figcaption itemprop="caption description">Image caption here</figcaption>
                         </figure>
                         <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject" class="grid-item probootstrap-animate">
                             <a href="img/gal_img_full_4.jpg" itemprop="contentUrl" data-size="1000x662">
-                                <img src="img/gal_img_sm_4.jpg" itemprop="thumbnail" alt="Free Bootstrap Template by uicookies.com" />
+                                <img src="img/gal_img_sm_4.jpg" itemprop="thumbnail" alt="" />
                             </a>
                             <figcaption itemprop="caption description">Image caption here</figcaption>
                         </figure>
 
                         <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject" class="grid-item probootstrap-animate">
                             <a href="img/gal_img_full_1.jpg" itemprop="contentUrl" data-size="1000x666">
-                                <img src="img/gal_img_sm_1.jpg" itemprop="thumbnail" alt="Free Bootstrap Template by uicookies.com" />
+                                <img src="img/gal_img_sm_1.jpg" itemprop="thumbnail" alt="" />
                             </a>
                             <figcaption itemprop="caption description">Image caption here</figcaption>
                         </figure>
                         <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject" class="grid-item probootstrap-animate">
                             <a href="img/gal_img_full_2.jpg" itemprop="contentUrl" data-size="1000x667">
-                                <img src="img/gal_img_sm_2.jpg" itemprop="thumbnail" alt="Free Bootstrap Template by uicookies.com" />
+                                <img src="img/gal_img_sm_2.jpg" itemprop="thumbnail" alt="" />
                             </a>
                             <figcaption itemprop="caption description">Image caption here</figcaption>
                         </figure>
                         <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject" class="grid-item probootstrap-animate">
                             <a href="img/gal_img_full_3.jpg" itemprop="contentUrl" data-size="1000x1500">
-                                <img src="img/gal_img_sm_3.jpg" itemprop="thumbnail" alt="Free Bootstrap Template by uicookies.com" />
+                                <img src="img/gal_img_sm_3.jpg" itemprop="thumbnail" alt="" />
                             </a>
                             <figcaption itemprop="caption description">Image caption here</figcaption>
                         </figure>
                         <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject" class="grid-item probootstrap-animate">
                             <a href="img/gal_img_full_4.jpg" itemprop="contentUrl" data-size="1000x662">
-                                <img src="img/gal_img_sm_4.jpg" itemprop="thumbnail" alt="Free Bootstrap Template by uicookies.com" />
+                                <img src="img/gal_img_sm_4.jpg" itemprop="thumbnail" alt="" />
                             </a>
                             <figcaption itemprop="caption description">Image caption here</figcaption>
                         </figure>
 
                         <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject" class="grid-item probootstrap-animate">
                             <a href="img/gal_img_full_1.jpg" itemprop="contentUrl" data-size="1000x666">
-                                <img src="img/gal_img_sm_1.jpg" itemprop="thumbnail" alt="Free Bootstrap Template by uicookies.com" />
+                                <img src="img/gal_img_sm_1.jpg" itemprop="thumbnail" alt="" />
                             </a>
                             <figcaption itemprop="caption description">Image caption here</figcaption>
                         </figure>
                         <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject" class="grid-item probootstrap-animate">
                             <a href="img/gal_img_full_2.jpg" itemprop="contentUrl" data-size="1000x667">
-                                <img src="img/gal_img_sm_2.jpg" itemprop="thumbnail" alt="Free Bootstrap Template by uicookies.com" />
+                                <img src="img/gal_img_sm_2.jpg" itemprop="thumbnail" alt="" />
                             </a>
                             <figcaption itemprop="caption description">Image caption here</figcaption>
                         </figure>
                         <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject" class="grid-item probootstrap-animate">
                             <a href="img/gal_img_full_3.jpg" itemprop="contentUrl" data-size="1000x1500">
-                                <img src="img/gal_img_sm_3.jpg" itemprop="thumbnail" alt="Free Bootstrap Template by uicookies.com" />
+                                <img src="img/gal_img_sm_3.jpg" itemprop="thumbnail" alt="" />
                             </a>
                             <figcaption itemprop="caption description">Image caption here</figcaption>
                         </figure>
                         <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject" class="grid-item probootstrap-animate">
                             <a href="img/gal_img_full_4.jpg" itemprop="contentUrl" data-size="1000x662">
-                                <img src="img/gal_img_sm_4.jpg" itemprop="thumbnail" alt="Free Bootstrap Template by uicookies.com" />
+                                <img src="img/gal_img_sm_4.jpg" itemprop="thumbnail" alt="" />
                             </a>
                             <figcaption itemprop="caption description">Image caption here</figcaption>
                         </figure>
 
                         <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject" class="grid-item probootstrap-animate">
                             <a href="img/gal_img_full_1.jpg" itemprop="contentUrl" data-size="1000x666">
-                                <img src="img/gal_img_sm_1.jpg" itemprop="thumbnail" alt="Free Bootstrap Template by uicookies.com" />
+                                <img src="img/gal_img_sm_1.jpg" itemprop="thumbnail" alt="" />
                             </a>
                             <figcaption itemprop="caption description">Image caption here</figcaption>
                         </figure>
                         <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject" class="grid-item probootstrap-animate">
                             <a href="img/gal_img_full_2.jpg" itemprop="contentUrl" data-size="1000x667">
-                                <img src="img/gal_img_sm_2.jpg" itemprop="thumbnail" alt="Free Bootstrap Template by uicookies.com" />
+                                <img src="img/gal_img_sm_2.jpg" itemprop="thumbnail" alt="" />
                             </a>
                             <figcaption itemprop="caption description">Image caption here</figcaption>
                         </figure>
                         <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject" class="grid-item probootstrap-animate">
                             <a href="img/gal_img_full_3.jpg" itemprop="contentUrl" data-size="1000x1500">
-                                <img src="img/gal_img_sm_3.jpg" itemprop="thumbnail" alt="Free Bootstrap Template by uicookies.com" />
+                                <img src="img/gal_img_sm_3.jpg" itemprop="thumbnail" alt="" />
                             </a>
                             <figcaption itemprop="caption description">Image caption here</figcaption>
                         </figure>
                         <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject" class="grid-item probootstrap-animate">
                             <a href="img/gal_img_full_4.jpg" itemprop="contentUrl" data-size="1000x662">
-                                <img src="img/gal_img_sm_4.jpg" itemprop="thumbnail" alt="Free Bootstrap Template by uicookies.com" />
+                                <img src="img/gal_img_sm_4.jpg" itemprop="thumbnail" alt="" />
                             </a>
                             <figcaption itemprop="caption description">Image caption here</figcaption>
                         </figure>
