--- a/BusinessGrowthProject/templates/base.html
+++ b/BusinessGrowthProject/templates/base.html
@@ -29,24 +29,24 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand navbarlogo" href="index.html">FineOak</a>
+                <a class="navbar-brand navbarlogo" href="{% url 'Home' %}"> </a>
             </div>
 
             <div id="navbar-collapse" class="navbar-collapse collapse headnavbar">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="{% url 'Home' %}">Home</a></li>
+                    <li><a href="{% url 'Services' %}">Services</a></li>
+                    <li><a href="{% url 'About' %}">About</a></li>
+                    <li><a href="{% url 'Gallery' %}">Gallery</a></li>
+                    <li><a href="{% url 'Blog' %}">Blog</a></li>
                     <li class="dropdown">
                         <a href="#" data-toggle="dropdown" class="dropdown-toggle">Clients</a>
                         <ul class="dropdown-menu">
-                            <li><a href="client.html">Client List</a></li>
-                            <li><a href="testimonials.html">Testimonials</a></li>
+                            <li><a href="{% url 'Clients' %}">Client List</a></li>
+                            <li><a href="{% url 'Testimonials' %}">Testimonials</a></li>
                         </ul>
                     </li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="{% url 'Contact' %}">Contact</a></li>
                 </ul>
             </div>
         </div>
