--- a/Services/templates/Services/Product-description.html
+++ b/Services/templates/Services/Product-description.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
-
+{% load staticfiles %}
 {% block links %}
 
-<link rel="stylesheet" href="css/blog.css">
+<link rel="stylesheet" href="{% static 'css/blog.css' %}">
 
-<script src="js/jqueryscript.js"></script>
+<script src="{% static'js/jqueryscript.js' %}"></script>
 {% endblock %}
 
 {% block content %}
@@ -160,5 +160,5 @@
 
 {% block scripts %}
 
-<script src="js/blog.js"></script>
+<script src="{% 'js/blog.js' %}"></script>
 {% endblock %}
