--- a/Services/templates/Services/Services.html
+++ b/Services/templates/Services/Services.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 
 {% block links %}
 
@@ -6,48 +7,6 @@
 {% endblock %}
 
 {% block content %}
-<nav class="navbar navbar-default navbar-fixed-top probootstrap-navbar">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse"
-                aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand navbarlogo" href="index.html" title="uiCookies:FineOak">FineOak</a>
-        </div>
-
-        <div id="navbar-collapse" class="navbar-collapse collapse headnavbar">
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="index.html">Home</a></li>
-                <li class="active"><a href="services.html">Services</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li class="dropdown">
-                    <a href="#" data-toggle="dropdown" class="dropdown-toggle">Pages</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="portfolio-single.html">Portfolio Single</a></li>
-                        <li class="dropdown-submenu dropdown">
-                            <a href="#" data-toggle="dropdown" class="dropdown-toggle"><span>Sub Menu</span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Second Level Menu</a></li>
-                                <li><a href="#">Second Level Menu</a></li>
-                                <li><a href="#">Second Level Menu</a></li>
-                                <li><a href="#">Second Level Menu</a></li>
-                            </ul>
-                        </li>
-                        <li class="active"><a href="services.html">Services</a></li>
-                    </ul>
-                </li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
 
 <section class="flexslider">
     <ul class="slides">
@@ -81,7 +40,7 @@
                         <div class="probootstrap-service-2 probootstrap-animate">
                             <div class="image">
                                 <div class="image-bg">
-                                    <img src="img/img_sm_1.jpg" alt="Free Bootstrap Template by uicookies.com">
+                                    <img src="img/img_sm_1.jpg" alt="">
                                 </div>
                             </div>
                             <div class="text">
@@ -101,7 +60,7 @@
                         <div class="probootstrap-service-2 probootstrap-animate">
                             <div class="image">
                                 <div class="image-bg">
-                                    <img src="img/gal_img_full_3.jpg" alt="Free Bootstrap Template by uicookies.com">
+                                    <img src="img/gal_img_full_3.jpg" alt="">
                                 </div>
                             </div>
                             <div class="text">
@@ -121,7 +80,7 @@
                         <div class="probootstrap-service-2 probootstrap-animate">
                             <div class="image">
                                 <div class="image-bg">
-                                    <img src="img/img_sm_1.jpg" alt="Free Bootstrap Template by uicookies.com">
+                                    <img src="img/img_sm_1.jpg" alt="">
                                 </div>
                             </div>
                             <div class="text">
@@ -141,7 +100,7 @@
                         <div class="probootstrap-service-2 probootstrap-animate">
                             <div class="image">
                                 <div class="image-bg">
-                                    <img src="img/gal_img_full_3.jpg" alt="Free Bootstrap Template by uicookies.com">
+                                    <img src="img/gal_img_full_3.jpg" alt="">
                                 </div>
                             </div>
                             <div class="text">
@@ -161,7 +120,7 @@
                         <div class="probootstrap-service-2 probootstrap-animate">
                             <div class="image">
                                 <div class="image-bg">
-                                    <img src="img/gal_img_full_3.jpg" alt="Free Bootstrap Template by uicookies.com">
+                                    <img src="img/gal_img_full_3.jpg" alt="">
                                 </div>
                             </div>
                             <div class="text">
@@ -181,7 +140,7 @@
                         <div class="probootstrap-service-2 probootstrap-animate">
                             <div class="image">
                                 <div class="image-bg">
-                                    <img src="img/gal_img_full_3.jpg" alt="Free Bootstrap Template by uicookies.com">
+                                    <img src="img/gal_img_full_3.jpg" alt="">
                                 </div>
                             </div>
                             <div class="text">
